# CodeGod

./: README.md  __init__.py  blah.py  bot.py  data.py  loader.py
cogs/: __init__.py  code_editor.py  code_executor.py  help.py  misc.py  owner.py  puzzle.py  regex_executor.py  stack_search.py  tools.py
modules/: __init__.py  compiler.py  database.py  fun_art.py  parse.py
modules/tio/: _TioFile.py  _TioRequest.py  _TioVariable.py  __init__.py
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs
