[package]
name = "utils"
version = "0.1.0"
authors = ["loyston500 <loyston500@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "string_sum"
crate-type = ["cdylib"]

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

